test/files/neg/multi-array.scala
/** Check that a multi-dimensional array can't be created
 *  when the wrong number of arguments w.r.t. to the array's
 *  type is given.
 */
class Foo {
  val a: Array[Int] = new Array(10, 10)
}
